--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ h6,
     padding: 30px 0;
     color: var(--dark);
     font-weight: 500;
-    text-transform: uppercase;
+    text-transform: capitalize;
     outline: none;
 }
 
@@ -371,7 +371,7 @@ h6,
     color: var(--primary);
     font-weight: 600;
     letter-spacing: 5px;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 
@@ -831,7 +831,7 @@ h6,
 }
 
 .blog-meta {
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .blog-meta a {
@@ -942,7 +942,7 @@ h6,
     display: block;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .coming-soon .form-control {
